--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,6 +4,9 @@ header.top {
   position: relative;
   top: 120px;
   background-color: #f79c00;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   background-image: url("https://www.transparenttextures.com/patterns/blizzard.png");
 /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
